---------------------------------------------------------------------------------------------------
Version: 0.4.14
Date: 0.1.26
  Changes:
  Bugfixes:
    - Crash with angels dependency for recipe compatibility.
  Info:
    - Thanks @creepersx17 for trying my mod with only angels enabled :P
---------------------------------------------------------------------------------------------------
Version: 0.4.13
Date: 6.1.26
  Bugfixes:
    - Typo Crash with Compatibility addon scrap-repressor mod.
  Changes:
    - Reduced Scrap drop chance for for Armour control unit from 15% --> 5% 
    - README.
---------------------------------------------------------------------------------------------------
Version: 0.4.12
Date: 6.1.26
  Changes:
    - Reduced Brightness on T2 NVGs.
    - Added armour control unit in to recipe for scrap-repressor mod at 7.5 % scrap drop chance.
    - Added extra checks for metal & stars mod.
    - Changed to another nanobots mod. Not as annoying as nanobots-refined.
    - nanobots-refined now marks as incompatible. Due do tech changes & tips and trick being replace with nanobots3
---------------------------------------------------------------------------------------------------
Version: 0.4.11
Date: 31.12.25
  Bugfixes:
    - Tech soft lock with K2.
    - Recipe crash regards to {type="fluid", name="kr-mineral-water", amount=100},
  Info:
    - Re released version as 0.4.11-1 visually 0.4.11
---------------------------------------------------------------------------------------------------
Version: 0.4.10
Date: 27.12.25
  Changes:
    - More changes for 2.0 Beta Angels.
    - Recipe & Tech overhaul.
---------------------------------------------------------------------------------------------------
Version: 0.4.9
Date: 26.12.25
  Bugfixes:
    - WIP Angels 2.0 update For PAR. https://github.com/SGZ-Creations/Power-Armour-Replacer/issues/4
  Thanks:
    - @kuroxusagi For thee git report.